--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "mongoose": "^6.7.1",
     "react": "^18.2.0",
     "react-router": "^6.4.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
