--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
@@ -9,6 +10,9 @@
     "react-router": "^6.4.3"
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
 }
